--- a/pages/index/index.wxss
+++ b/pages/index/index.wxss
@@ -1,54 +1,63 @@
-/**index.wxss**/
-
-.slider swiper {
-  height: 400rpx;
-}
-
-.slide-image {
-  width: 100%;
+.index-bottom {
   height: 100%;
+  width: 750rpx;
+  position: fixed;
 }
 
-swiper {
-  height: 200px;
-}
-
-.board {
+.index {
   display: flex;
   flex-direction: column;
-  margin: 20rpx;
-  justify-content: space-around;
+  background: lightgray;
+  height: 100%;
+  position: fixed;
+  width: 750rpx;
+  transition: All 0.4s ease;
+  -webkit-transition: All 0.4s ease;
 }
 
-.board-title {
-  text-align: center;
+.index-item {
+  background: white;
+  box-shadow: 1px 1px 1px lightgray;
+  margin: 10rpx;
+  border-radius: 8rpx;
 }
 
-.board-title > text:first-child {
-  font-size: 44rpx;
-  font-weight: bold;
-}
-
-.board-title > text:last-child {
-  font-size: 30rpx;
-  font-weight: bold;
-}
-
-.board-item {
+.index-item:nth-child(1) {
   display: flex;
-  flex: 1;
-  margin-top: 20rpx;
-  padding: 10rpx;
-  border: 1rpx solid gainsboro;
-  cursor: pointer;
+  flex: 2;
+  justify-content: center;
+  align-items: center;
 }
 
-.board-item image {
-  width: 80rpx;
-  height: 80rpx;
+.index-item:nth-child(1) image {
+  width: 68rpx;
+  height: 38rpx;
+  background: lightgray;
 }
 
-.board-item text {
-  flex: 1;
-  align-self: center;
+.c-state1 {
+  transform: rotate(0deg) scale(1) translate(75%, 0%);
+  -webkit-transform: rotate(0deg) scale(1) translate(75%, 0%);
 }
+
+input {
+  flex: 1;
+  border: 1px solid black;
+  margin: 10rpx 15rpx;
+}
+
+.other-button-hover {
+  background-color: blue;
+}
+
+
+.index > .index-item:nth-child(2) {
+  flex: 1;
+  display: flex;
+  align-items:center;
+}
+
+.index > .index-item:nth-child(3) {
+  flex: 5;
+}
+
