--- a/pages/index/index.wxss
+++ b/pages/index/index.wxss
@@ -17,7 +17,7 @@
 
 .index-item {
   background: white;
-  box-shadow: 1px 1px 1px lightgray;
+  box-shadow: 2rpx 2rpx 2rpx lightgray;
   margin: 10rpx;
   border-radius: 8rpx;
 }
@@ -42,7 +42,7 @@
 
 input {
   flex: 1;
-  border: 1px solid black;
+  border: 2rpx solid black;
   margin: 10rpx 15rpx;
 }
 
@@ -50,14 +50,53 @@ input {
   background-color: blue;
 }
 
-
 .index > .index-item:nth-child(2) {
   flex: 1;
   display: flex;
-  align-items:center;
+  align-items: center;
 }
 
 .index > .index-item:nth-child(3) {
   flex: 5;
+  padding: 20rpx 10rpx;
+  overflow: hidden;
 }
 
+.table {
+  border: 2rpx solid darkgray;
+  margin: 10rpx;
+}
+
+.tr {
+  display: flex;
+  justify-content: center;
+  align-items: stretch;
+}
+
+.th {
+  flex: 1;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 6rpx;
+  border:2rpx solid darkgray;
+}
+
+.th:nth-child(2){
+  flex: 2;
+}
+
+
+.h1{
+  text-align: center;
+
+}
+
+.h2{
+  text-align: center;
+  font-size: 34rpx;
+}
+
+swiper{
+  height: 100%;
+}
