--- a/app.wxss
+++ b/app.wxss
@@ -1,1 +1,13 @@
 /**app.wxss**/
+
+navigator {
+  color: blue;
+  padding: 10rpx;
+}
+
+input {
+  flex: 1;
+  border: 2rpx solid black;
+  margin: 10rpx 15rpx;
+  padding: 6rpx;
+}
