--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -1,10 +1,6 @@
 <view>
-  <include src="../usercenter/usercenter.wxml" />
-  <view class="index {{open ? 'c-state1' : ''}}">
+  <view class="index">
     <view class="index-item">
-      <view>
-        <image bindtap="tap_ch" src="../images/menuIcon.png"></image>
-      </view>
       <view>
         <input placeholder="图书查询" auto-focus/>
       </view>
@@ -19,26 +15,13 @@
       <button type="default" size="mini" hover-class="other-button-hover"> 西邮黄页 </button>
     </view>
     <view class="index-item">
-      <view wx:if="{{!courseMessage}}">
-        <form bindsubmit="formSubmit" bindreset="formReset">
-          <view>
-            <view>学号</view>
-            <input name="username" placeholder="请输入学号(如02142018)" />
-          </view>
-          <view>
-            <view>密码</view>
-            <input name="password" password="true" placeholder="请输入密码(默认学号后六位)" />
-          </view>
-          <view>
-            <button formType="submit" size="mini">提交</button>
-            <button formType="reset" size="mini">取消</button>
-          </view>
-        </form>
+      <view class="info" wx:if="{{!courseMessage}}">
+        <view>暂无课程表数据</view>
+        <view>请先在“我的’里面进行登录</view>
       </view>
       <block wx:else>
         <view class="h1">今日课程</view>
-        <button bindtap="clearStorage" size="mini">取消</button>
-        <swiper indicator-dots="true" indicator-active-color="#000000" circular="true">
+        <swiper circular="true">
           <block wx:for="{{courseMessage}}" wx:for-item="week" wx:for-index="day" wx:key="num">
             <swiper-item>
               <view class="h2">星期{{week[4].num}}</view>
