--- a/pages/index/index.wxss
+++ b/pages/index/index.wxss
@@ -1,9 +1,3 @@
-.index-bottom {
-  height: 100%;
-  width: 750rpx;
-  position: fixed;
-}
-
 .index {
   display: flex;
   flex-direction: column;
@@ -22,6 +16,11 @@
   border-radius: 8rpx;
 }
 
+.info {
+  text-align: center;
+  margin-top: 100px;
+}
+
 .index-item:nth-child(1) {
   display: flex;
   flex: 2;
@@ -33,17 +32,6 @@
   width: 68rpx;
   height: 38rpx;
   background: lightgray;
-}
-
-.c-state1 {
-  transform: rotate(0deg) scale(1) translate(75%, 0%);
-  -webkit-transform: rotate(0deg) scale(1) translate(75%, 0%);
-}
-
-input {
-  flex: 1;
-  border: 2rpx solid black;
-  margin: 10rpx 15rpx;
 }
 
 .other-button-hover {
@@ -79,24 +67,24 @@ input {
   justify-content: center;
   align-items: center;
   padding: 6rpx;
-  border:2rpx solid darkgray;
+  border: 2rpx solid darkgray;
 }
 
-.th:nth-child(2){
+.th:nth-child(2) {
   flex: 2;
 }
 
-
-.h1{
+.h1 {
   text-align: center;
-
 }
 
-.h2{
+.h2 {
   text-align: center;
   font-size: 34rpx;
+  margin: 10rpx;
 }
 
-swiper{
+swiper {
   height: 100%;
 }
+
