--- a/pages/usercenter/usercenter.wxss
+++ b/pages/usercenter/usercenter.wxss
@@ -1,1 +1,46 @@
 /* pages/usercenter/usercenter.wxss */
+
+.page {
+  background: lightgray;
+  height: 100%;
+  width: 750rpx;
+  position: fixed;
+}
+
+.input-box {
+  background: white;
+  margin: 100rpx 20rpx;
+  padding: 40rpx;
+  height: 650rpx;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  border-radius: 8rpx;
+  box-shadow: 2rpx 2rpx 2rpx lightgray;
+}
+
+.input-item {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  margin: 20rpx;
+  padding: 20rpx;
+  background: white;
+}
+
+.input-item > view {
+  flex: 1;
+}
+
+.input-item > input {
+  flex: 3;
+}
+
+.error-message {
+  position: fixed;
+  left: 250rpx;
+}
+
+.button-hover {
+  background-color: deepskyblue;
+}
